--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "pg": "8.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.3.0",
     "sqlite3": "^5.0.11"
   }
 }
