--- a/package.json
+++ b/package.json
@@ -10,15 +10,24 @@
     "migrate:down": "knex migrate:down",
     "migrate:status": "knex migrate:status",
     "seed:create": "knex seed:make",
-    "seed:run": "knex seed:run"
+    "seed:run": "knex seed:run",
+    "test": "jest"
   },
   "dependencies": {
     "knex": "0.21.6",
     "next": "latest",
+    "nvm": "^0.0.4",
     "pg": "8.4.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "sqlite3": "^5.0.11"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.18.10",
+    "@babel/preset-react": "^7.18.6",
+    "babel-jest": "^28.1.3",
+    "jest": "^28.1.3",
+    "react-test-renderer": "^18.2.0"
   }
 }
